--- a/heyBooks/src/main/webapp/resources/css/admin.css
+++ b/heyBooks/src/main/webapp/resources/css/admin.css
@@ -1459,7 +1459,7 @@ table.bbsview_table_style tbody td.cell {
   padding: 8% 0 0;
   margin: auto;
 }
-.form {
+.login-page .form {
   position: relative;
   z-index: 1;
   background: #FFFFFF;
@@ -1469,7 +1469,7 @@ table.bbsview_table_style tbody td.cell {
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-.form input {
+.login-page .form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
   background: #f2f2f2;
@@ -1480,7 +1480,7 @@ table.bbsview_table_style tbody td.cell {
   box-sizing: border-box;
   font-size: 14px;
 }
-.form button {
+.login-page .form input[type=submit] {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
@@ -1494,19 +1494,19 @@ table.bbsview_table_style tbody td.cell {
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
+.login-page .form button:hover,.form button:active,.form button:focus {
   background: #0daf91;
 }
-.form .message {
+.login-page .form .message {
   margin: 15px 0 0;
   color: #b3b3b3;
   font-size: 12px;
 } 
-.form .message a {
+.login-page .form .message a {
   color: #4CAF50;
   text-decoration: none;
 }
-.form .register-form {
+.login-page .form .register-form {
   display: none;
 }
 .login-page {
