--- a/heyBooks/src/main/webapp/resources/css/admin.css
+++ b/heyBooks/src/main/webapp/resources/css/admin.css
@@ -960,10 +960,14 @@ div.skin-add-form table.sf-option-table  li:first-child {
 	background-color: #f1f1f1;
 }
 
-.admin_item_add table input[type=text], .admin_item_add table textarea {
-	padding-left: 5px;
+.admin_item_add table input[type=text], .admin_item_add table textarea{
+	padding: 2px 5px;
+	border: 1px solid #aaa;
+}  
+.admin_item_add table select{
+	border-color: #aaa; 
+	padding: 3px 0;
 }
-
 .admin_item_add table  td {
 	border-left: 1px solid #dadada;
 	border-bottom: 1px solid #dadada;
@@ -1003,6 +1007,7 @@ div.skin-add-form table.sf-option-table  li:first-child {
 	font-weight: 500;
 }
 
+
 #item_price input, .direct_price {
 	width: 70px;
 }
@@ -1031,10 +1036,29 @@ div.skin-add-form table.sf-option-table  li:first-child {
 	width: 140px;
 }
 
+form button.add_submit{
+	text-align: center;
+    display: block;
+    width: 170px;
+    height: 50px;
+    margin: 20px auto;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 16px;
+    background: #0daf91;
+    color: white !important;
+}
+
 .user_list_box table td {
 	text-align: center;
 }
-
+a.admin_list_btn{
+	display: block;
+	padding: 2px 10px;
+	border: 1px solid #ccc;
+	font-size: 13px;
+	margin: 3px 0;
+}
 .order_settle h4 {
 	font-size: 14px;
 	font-weight: bold;
@@ -1095,6 +1119,8 @@ div.skin-add-form table.sf-option-table  li:first-child {
 #user_list_table tbody tr {
 	height: 53px;
 }
+
+
 /* 주문상세창 */
 .order_settle {
 	display: table;
