--- a/heyBooks/src/main/webapp/resources/css/admin.css
+++ b/heyBooks/src/main/webapp/resources/css/admin.css
@@ -1053,7 +1053,7 @@ div.skin-add-form table.sf-option-table  li:first-child {
 	width: 140px;
 }
 
-form button.add_submit{
+.add_submit{
 	text-align: center;
     display: block;
     width: 170px;
@@ -1061,10 +1061,11 @@ form button.add_submit{
     margin: 20px auto;
     border-radius: 5px;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 16px !important;
     background: #0daf91;
     color: white !important;
-}
+    background-color: #0daf91 !important; 
+} 
 
 .user_list_box table td {
 	text-align: center;
